--- a/src/assets/scss/utils/themes.scss
+++ b/src/assets/scss/utils/themes.scss
@@ -98,10 +98,12 @@ $themes: (
   // Theme main
   'main': (
     'primary': hsl($theme-main-h, $theme-main-s, $theme-main-l),
+    'primary-dark': hsl($theme-main-h, $theme-main-s, $theme-main-l - 10%),
     'primary-light': hsl($theme-main-h, $theme-main-s, $theme-main-l + 10%),
     'primary-transparent': hsla($theme-main-h, $theme-main-s, $theme-main-l, 0.7),
     'primary-x-transparent': hsla($theme-main-h, $theme-main-s, $theme-main-l, 0.3),
     'secondary': hsl($theme-main-alt-h, $theme-main-alt-s, $theme-main-alt-l),
+    'secondary-dark': hsl($theme-main-alt-h, $theme-main-alt-s, $theme-main-alt-l - 10%),
     'secondary-light': hsl($theme-main-alt-h, $theme-main-alt-s, $theme-main-alt-l + 10%),
     'secondary-transparent': hsla($theme-main-alt-h, $theme-main-alt-s, $theme-main-alt-l, 0.7),
     'secondary-x-transparent': hsla($theme-main-alt-h, $theme-main-alt-s, $theme-main-alt-l, 0.3),
@@ -145,10 +147,12 @@ $themes: (
   // Theme 1 - Sculptural-buccal massage
   '1': (
     'primary': hsl($theme-1-h, $theme-1-s, $theme-1-l),
+    'primary-dark': hsl($theme-1-h, $theme-1-s, $theme-1-l - 8%),
     'primary-light': hsl($theme-1-h, $theme-1-s, $theme-1-l + 8%),
     'primary-transparent': hsla($theme-1-h, $theme-1-s, $theme-1-l, 0.7),
     'primary-x-transparent': hsla($theme-1-h, $theme-1-s, $theme-1-l, 0.3),
     'secondary': hsl($theme-1-alt-h, $theme-1-alt-s, $theme-1-alt-l),
+    'secondary-dark': hsl($theme-1-alt-h, $theme-1-alt-s, $theme-1-alt-l - 10%),
     'secondary-light': hsl($theme-1-alt-h, $theme-1-alt-s, $theme-1-alt-l + 10%),
     'secondary-transparent': hsla($theme-1-alt-h, $theme-1-alt-s, $theme-1-alt-l, 0.7),
     'secondary-x-transparent': hsla($theme-1-alt-h, $theme-1-alt-s, $theme-1-alt-l, 0.3),
@@ -177,10 +181,12 @@ $themes: (
   // Theme 2 - Classic facial massage
   '2': (
     'primary': hsl($theme-2-h, $theme-2-s, $theme-2-l),
+    'primary-dark': hsl($theme-2-h, $theme-2-s, $theme-2-l - 10%),
     'primary-light': hsl($theme-2-h, $theme-2-s, $theme-2-l + 10%),
     'primary-transparent': hsla($theme-2-h, $theme-2-s, $theme-2-l, 0.7),
     'primary-x-transparent': hsla($theme-2-h, $theme-2-s, $theme-2-l, 0.3),
     'secondary': hsl($theme-2-alt-h, $theme-2-alt-s, $theme-2-alt-l),
+    'secondary-dark': hsl($theme-2-alt-h, $theme-2-alt-s, $theme-2-alt-l - 10%),
     'secondary-light': hsl($theme-2-alt-h, $theme-2-alt-s, $theme-2-alt-l + 10%),
     'secondary-transparent': hsla($theme-2-alt-h, $theme-2-alt-s, $theme-2-alt-l, 0.7),
     'secondary-x-transparent': hsla($theme-2-alt-h, $theme-2-alt-s, $theme-2-alt-l, 0.3),
@@ -209,10 +215,12 @@ $themes: (
   // Theme 3 - Facial lymphatic drainage
   '3': (
     'primary': hsl($theme-3-h, $theme-3-s, $theme-3-l),
+    'primary-dark': hsl($theme-3-h, $theme-3-s, $theme-3-l - 10%),
     'primary-light': hsl($theme-3-h, $theme-3-s, $theme-3-l + 10%),
     'primary-transparent': hsla($theme-3-h, $theme-3-s, $theme-3-l, 0.7),
     'primary-x-transparent': hsla($theme-3-h, $theme-3-s, $theme-3-l, 0.3),
     'secondary': hsl($theme-3-alt-h, $theme-3-alt-s, $theme-3-alt-l),
+    'secondary-dark': hsl($theme-3-alt-h, $theme-3-alt-s, $theme-3-alt-l - 10%),
     'secondary-light': hsl($theme-3-alt-h, $theme-3-alt-s, $theme-3-alt-l + 10%),
     'secondary-transparent': hsla($theme-3-alt-h, $theme-3-alt-s, $theme-3-alt-l, 0.7),
     'secondary-x-transparent': hsla($theme-3-alt-h, $theme-3-alt-s, $theme-3-alt-l, 0.3),
@@ -241,6 +249,7 @@ $themes: (
   // Theme 4 - Japanese Asahi massage
   '4': (
     'primary': hsl($theme-4-h, $theme-4-s, $theme-4-l),
+    'primary-dark': hsl($theme-4-h, $theme-4-s, $theme-4-l - 6%),
     'primary-light': hsl($theme-4-h, $theme-4-s, $theme-4-l + 6%),
     'primary-transparent': hsla($theme-4-h, $theme-4-s, $theme-4-l, 0.7),
     'primary-x-transparent': hsla($theme-4-h, $theme-4-s, $theme-4-l, 0.3),
@@ -248,7 +257,9 @@ $themes: (
     'secondary-light': hsl($theme-4-alt-h, $theme-4-alt-s, $theme-4-alt-l + 10%),
     'secondary-transparent': hsla($theme-4-alt-h, $theme-4-alt-s, $theme-4-alt-l, 0.7),
     'secondary-x-transparent': hsla($theme-4-alt-h, $theme-4-alt-s, $theme-4-alt-l, 0.3),
+    'additional': hsl(173, 70%, 63%),
     'background': hsl(173, 85%, 95%),
+    'alt-background': hsl(0, 100%, 97%),
     'header-image-1': (
       'small': (
         '1x': '../../../img/main-screen/4-bg-1_normal@1x.png',
@@ -273,10 +284,12 @@ $themes: (
   // Theme 5 - Chiromassage
   '5': (
     'primary': hsl($theme-5-h, $theme-5-s, $theme-5-l),
+    'primary-dark': hsl($theme-5-h, $theme-5-s, $theme-5-l - 10%),
     'primary-light': hsl($theme-5-h, $theme-5-s, $theme-5-l + 10%),
     'primary-transparent': hsla($theme-5-h, $theme-5-s, $theme-5-l, 0.7),
     'primary-x-transparent': hsla($theme-5-h, $theme-5-s, $theme-5-l, 0.3),
     'secondary': hsl($theme-5-alt-h, $theme-5-alt-s, $theme-5-alt-l),
+    'secondary-dark': hsl($theme-5-alt-h, $theme-5-alt-s, $theme-5-alt-l - 10%),
     'secondary-light': hsl($theme-5-alt-h, $theme-5-alt-s, $theme-5-alt-l + 10%),
     'secondary-transparent': hsla($theme-5-alt-h, $theme-5-alt-s, $theme-5-alt-l, 0.7),
     'secondary-x-transparent': hsla($theme-5-alt-h, $theme-5-alt-s, $theme-5-alt-l, 0.3),
@@ -305,14 +318,17 @@ $themes: (
   // Theme 6 - Sports massage
   '6': (
     'primary': hsl($theme-6-h, $theme-6-s, $theme-6-l),
+    'primary-dark': hsl($theme-6-h, $theme-6-s, $theme-6-l - 8%),
     'primary-light': hsl($theme-6-h, $theme-6-s, $theme-6-l + 8%),
     'primary-transparent': hsla($theme-6-h, $theme-6-s, $theme-6-l, 0.7),
     'primary-x-transparent': hsla($theme-6-h, $theme-6-s, $theme-6-l, 0.3),
     'secondary': hsl($theme-6-alt-h, $theme-6-alt-s, $theme-6-alt-l),
+    'secondary-dark': hsl($theme-6-alt-h, $theme-6-alt-s, $theme-6-alt-l - 8%),
     'secondary-light': hsl($theme-6-alt-h, $theme-6-alt-s, $theme-6-alt-l + 8%),
     'secondary-transparent': hsla($theme-6-alt-h, $theme-6-alt-s, $theme-6-alt-l, 0.7),
     'secondary-x-transparent': hsla($theme-6-alt-h, $theme-6-alt-s, $theme-6-alt-l, 0.3),
     'background': hsl(201, 100%, 75%),
+    'alt-background': hsl(201, 100%, 92%),
     'header-image-1': (
       'small': (
         '1x': '../../../img/main-screen/6-bg-1_small@1x.png',
@@ -352,10 +368,12 @@ $themes: (
   // Theme 7 - Figure modeling
   '7': (
     'primary': hsl($theme-7-h, $theme-7-s, $theme-7-l),
+    'primary-dark': hsl($theme-7-h, $theme-7-s, $theme-7-l - 10%),
     'primary-light': hsl($theme-7-h, $theme-7-s, $theme-7-l + 10%),
     'primary-transparent': hsla($theme-7-h, $theme-7-s, $theme-7-l, 0.7),
     'primary-x-transparent': hsla($theme-7-h, $theme-7-s, $theme-7-l, 0.3),
     'secondary': hsl($theme-7-alt-h, $theme-7-alt-s, $theme-7-alt-l),
+    'secondary-dark': hsl($theme-7-alt-h, $theme-7-alt-s, $theme-7-alt-l - 10%),
     'secondary-light': hsl($theme-7-alt-h, $theme-7-alt-s, $theme-7-alt-l + 10%),
     'secondary-transparent': hsla($theme-7-alt-h, $theme-7-alt-s, $theme-7-alt-l, 0.7),
     'secondary-x-transparent': hsla($theme-7-alt-h, $theme-7-alt-s, $theme-7-alt-l, 0.3),
@@ -385,10 +403,12 @@ $themes: (
   // Theme 8 - Body lymphatic-drainage
   '8': (
     'primary': hsl($theme-8-h, $theme-8-s, $theme-8-l),
+    'primary-dark': hsl($theme-8-h, $theme-8-s, $theme-8-l - 10%),
     'primary-light': hsl($theme-8-h, $theme-8-s, $theme-8-l + 10%),
     'primary-transparent': hsla($theme-8-h, $theme-8-s, $theme-8-l, 0.7),
     'primary-x-transparent': hsla($theme-8-h, $theme-8-s, $theme-8-l, 0.3),
     'secondary': hsl($theme-8-alt-h, $theme-8-alt-s, $theme-8-alt-l),
+    'secondary-dark': hsl($theme-8-alt-h, $theme-8-alt-s, $theme-8-alt-l - 10%),
     'secondary-light': hsl($theme-8-alt-h, $theme-8-alt-s, $theme-8-alt-l + 10%),
     'secondary-transparent': hsla($theme-8-alt-h, $theme-8-alt-s, $theme-8-alt-l, 0.7),
     'secondary-x-transparent': hsla($theme-8-alt-h, $theme-8-alt-s, $theme-8-alt-l, 0.3),
@@ -432,14 +452,17 @@ $themes: (
   // Theme 9 - Anti-cellulite massage
   '9': (
     'primary': hsl($theme-9-h, $theme-9-s, $theme-9-l),
+    'primary-dark': hsl($theme-9-h, $theme-9-s, $theme-9-l - 10%),
     'primary-light': hsl($theme-9-h, $theme-9-s, $theme-9-l + 10%),
     'primary-transparent': hsla($theme-9-h, $theme-9-s, $theme-9-l, 0.7),
     'primary-x-transparent': hsla($theme-9-h, $theme-9-s, $theme-9-l, 0.3),
     'secondary': hsl($theme-9-alt-h, $theme-9-alt-s, $theme-9-alt-l),
+    'secondary-dark': hsl($theme-9-alt-h, $theme-9-alt-s, $theme-9-alt-l - 10%),
     'secondary-light': hsl($theme-9-alt-h, $theme-9-alt-s, $theme-9-alt-l + 10%),
     'secondary-transparent': hsla($theme-9-alt-h, $theme-9-alt-s, $theme-9-alt-l, 0.7),
     'secondary-x-transparent': hsla($theme-9-alt-h, $theme-9-alt-s, $theme-9-alt-l, 0.3),
     'background': hsl(325, 68%, 85%),
+    'alt-background': hsl(330, 100%, 96%),
     'header-image-1': (
       'small': (
         '1x': '../../../img/main-screen/9-bg-1_small@1x.png',
@@ -479,14 +502,17 @@ $themes: (
   // Theme 10 - Neck massage
   '10': (
     'primary': hsl($theme-10-h, $theme-10-s, $theme-10-l),
+    'primary-dark': hsl($theme-10-h, $theme-10-s, $theme-10-l - 10%),
     'primary-light': hsl($theme-10-h, $theme-10-s, $theme-10-l + 10%),
     'primary-transparent': hsla($theme-10-h, $theme-10-s, $theme-10-l, 0.7),
     'primary-x-transparent': hsla($theme-10-h, $theme-10-s, $theme-10-l, 0.3),
     'secondary': hsl($theme-10-alt-h, $theme-10-alt-s, $theme-10-alt-l),
+    'secondary-dark': hsl($theme-10-alt-h, $theme-10-alt-s, $theme-10-alt-l - 10%),
     'secondary-light': hsl($theme-10-alt-h, $theme-10-alt-s, $theme-10-alt-l + 10%),
     'secondary-transparent': hsla($theme-10-alt-h, $theme-10-alt-s, $theme-10-alt-l, 0.7),
     'secondary-x-transparent': hsla($theme-10-alt-h, $theme-10-alt-s, $theme-10-alt-l, 0.3),
     'background': hsl(0, 0%, 94%),
+    'alt-background': hsl(195, 92%, 94%),
     'header-image-1': (
       'small': (
         '1x': '../../../img/main-screen/10-bg-1@1x.jpg',
@@ -511,10 +537,12 @@ $themes: (
   // Theme 11 - Fullbody massage
   '11': (
     'primary': hsl($theme-11-h, $theme-11-s, $theme-11-l),
+    'primary-dark': hsl($theme-11-h, $theme-11-s, $theme-11-l - 10%),
     'primary-light': hsl($theme-11-h, $theme-11-s, $theme-11-l + 10%),
     'primary-transparent': hsla($theme-11-h, $theme-11-s, $theme-11-l, 0.7),
     'primary-x-transparent': hsla($theme-11-h, $theme-11-s, $theme-11-l, 0.3),
     'secondary': hsl($theme-11-alt-h, $theme-11-alt-s, $theme-11-alt-l),
+    'secondary-dark': hsl($theme-11-alt-h, $theme-11-alt-s, $theme-11-alt-l - 10%),
     'secondary-light': hsl($theme-11-alt-h, $theme-11-alt-s, $theme-11-alt-l + 10%),
     'secondary-transparent': hsla($theme-11-alt-h, $theme-11-alt-s, $theme-11-alt-l, 0.7),
     'secondary-x-transparent': hsla($theme-11-alt-h, $theme-11-alt-s, $theme-11-alt-l, 0.3),
@@ -558,10 +586,12 @@ $themes: (
   // Theme 12 - Back massage
   '12': (
     'primary': hsl($theme-main-h, $theme-main-s, $theme-main-l),
+    'primary-dark': hsl($theme-main-h, $theme-main-s, $theme-main-l - 10%),
     'primary-light': hsl($theme-main-h, $theme-main-s, $theme-main-l + 10%),
     'primary-transparent': hsla($theme-main-h, $theme-main-s, $theme-main-l, 0.7),
     'primary-x-transparent': hsla($theme-main-h, $theme-main-s, $theme-main-l, 0.3),
     'secondary': hsl($theme-main-alt-h, $theme-main-alt-s, $theme-main-alt-l),
+    'secondary-dark': hsl($theme-main-alt-h, $theme-main-alt-s, $theme-main-alt-l - 10%),
     'secondary-light': hsl($theme-main-alt-h, $theme-main-alt-s, $theme-main-alt-l + 10%),
     'secondary-transparent': hsla($theme-main-alt-h, $theme-main-alt-s, $theme-main-alt-l, 0.7),
     'secondary-x-transparent': hsla($theme-main-alt-h, $theme-main-alt-s, $theme-main-alt-l, 0.3),
@@ -607,10 +637,12 @@ $themes: (
 // Инициализируем наши переменные как `null`, таким образом,
 // при использовании вне `themify`, они ничего не выведут.
 $color-primary: null;
+$color-primary-dark: null;
 $color-primary-light: null;
 $color-primary-transparent: null;
 $color-primary-x-transparent: null;
 $color-secondary: null;
+$color-secondary-dark: null;
 $color-secondary-light: null;
 $color-secondary-transparent: null;
 $color-secondary-x-transparent: null;
@@ -629,10 +661,12 @@ $features-icons: null;
     .theme-#{$theme} & {
       // Задание переменных темы как глобальных с `!global`
       $color-primary: map-get($props, 'primary') !global;
+      $color-primary-light: map-get($props, 'primary-dark') !global;
       $color-primary-light: map-get($props, 'primary-light') !global;
       $color-primary-transparent: map-get($props, 'primary-transparent') !global;
       $color-primary-x-transparent: map-get($props, 'primary-x-transparent') !global;
       $color-secondary: map-get($props, 'secondary') !global;
+      $color-secondary-light: map-get($props, 'secondary-dark') !global;
       $color-secondary-light: map-get($props, 'secondary-light') !global;
       $color-secondary-transparent: map-get($props, 'secondary-transparent') !global;
       $color-secondary-x-transparent: map-get($props, 'secondary-x-transparent') !global;
@@ -646,10 +680,12 @@ $features-icons: null;
 
       // Глобальное отключение переменных темы с `!global`
       $color-primary: null !global;
+      $color-primary-dark: null !global;
       $color-primary-light: null !global;
       $color-primary-transparent: null !global;
       $color-primary-x-transparent: null !global;
       $color-secondary: null !global;
+      $color-secondary-dark: null !global;
       $color-secondary-light: null !global;
       $color-secondary-transparent: null !global;
       $color-secondary-x-transparent: null !global;
