--- a/src/pug/includes/modules/content/price-list.pug
+++ b/src/pug/includes/modules/content/price-list.pug
@@ -56,8 +56,8 @@ section.price-list
                   - promoText = `${promoText}${massage.promo.text}<br>`
                   if massage.promo.starPlacement
                     - additionalClass = `table__row_promo table__row_promo-${massage.promo.starPlacement}`
-                  if massage.promo.highlightRow
-                    - additionalClass = `${additionalClass} table__row_highlight`
+                if massage === locals.data.pageData.massage
+                  - additionalClass = `${additionalClass} table__row_highlight`
                 tr.table__row(class=additionalClass)
                   td.table__cell
                     b.price-list__massage-name= massage.name
@@ -75,7 +75,9 @@ section.price-list
             b готовы полностью вернуть вам деньги
             |
             | за&nbsp;процедуру, если вам не&nbsp;понра&shy;вится. Но&nbsp;пока это никому не&nbsp;понадобилось&nbsp;:)
-          button.price-list-callback-form__trigger.link.link_primary.underline(type='button') Перезвоните мне
+          button.price-list-callback-form__trigger.link.underline(class=(locals.data.pageData.theme === 4 ? 'link_dark-primary' : 'link_primary') type='button') Перезвоните мне
         .price-list-callback-form__wrap.hidden
           button.price-list-callback-form__close(type='button' aria-label='Закрыть форму')
           include application-form/application-form
+          .application-form__success-message.hidden
+            p.application-form__success-text Спасибо, заявка принята! Мы скоро перезвоним
