--- a/src/pug/includes/popups/popup-appointment.pug
+++ b/src/pug/includes/popups/popup-appointment.pug
@@ -4,3 +4,6 @@ section.popup.popup-appointment(data-popup='closed' data-popup-name='appointment
     h2.popup-appointment__title.visually-hidden Запись на приём
     .popup-appointment__content
       include ../modules/content/application-form/application-form
+      .application-form__success-message.hidden
+        p.application-form__success-text Спасибо, заявка принята! Мы&nbsp;скоро&nbsp;перезвоним
+        button.application-form__repeat.button.underline.underline_dotted.underline_gray-dotted(type='button') Оставить ещё одну заявку
