--- a/src/pug/pages/anti-cellulite-massage.pug
+++ b/src/pug/pages/anti-cellulite-massage.pug
@@ -12,6 +12,7 @@ block variables
       canonical: 'http://expert-massage-clinic.ru/anti-cellulite-massage.html',
       pageClass: 'anti-cellulite-massage-page',
       theme: '9',
+      massage: globalData.massages['anti-cellulite-massage'],
       mainScreenHeading: 'Антицеллюлитный массаж',
       mainScreenSubheading: `Избавляет от&nbsp;целлюлита, разглаживает кожу. Подтягивает ягодицы, уменьшает «ушки»
         и&nbsp;бока`,
