--- a/src/pug/pages/back-massage.pug
+++ b/src/pug/pages/back-massage.pug
@@ -11,6 +11,7 @@ block variables
       canonical: 'http://expert-massage-clinic.ru/back-massage.html',
       pageClass: 'back-massage-page',
       theme: '12',
+      massage: globalData.massages['back-massage'],
       mainScreenHeading: '*',
       mainScreenSubheading: `*`,
       mainScreenFeatures: [
