--- a/src/pug/pages/body-lymphatic-drainage.pug
+++ b/src/pug/pages/body-lymphatic-drainage.pug
@@ -12,6 +12,7 @@ block variables
       canonical: 'http://expert-massage-clinic.ru/body-lymphatic-drainage.html',
       pageClass: 'body-lymphatic-drainage-page',
       theme: '8',
+      massage: globalData.massages['body-lymphatic-drainage'],
       mainScreenHeading: 'Лимфодренажный массаж',
       mainScreenSubheading: `Избавляет от&nbsp;отёков на&nbsp;лице и&nbsp;теле, оздоравливает и&nbsp;улучшает внешность,
         возвращает лёгкость походки`,
