--- a/src/pug/pages/chiromassage.pug
+++ b/src/pug/pages/chiromassage.pug
@@ -12,6 +12,7 @@ block variables
       canonical: 'http://expert-massage-clinic.ru/chiromassage.html',
       pageClass: 'chiromassage-page',
       theme: '5',
+      massage: globalData.massages['chiromassage'],
       mainScreenHeading: 'Хиромассаж лица',
       mainScreenSubheading: `Омолаживает и&nbsp;подтягивает кожу, улучшает эмоциональное состояние, гармонизирует
         и&nbsp;расслабляет`,
