--- a/src/pug/pages/facial-lymphatic-drainage.pug
+++ b/src/pug/pages/facial-lymphatic-drainage.pug
@@ -12,6 +12,7 @@ block variables
       canonical: 'http://expert-massage-clinic.ru/facial-lymphatic-drainage.html',
       pageClass: 'facial-lymphatic-drainage-page',
       theme: '3',
+      massage: globalData.massages['facial-lymphatic-drainage'],
       mainScreenHeading: 'Лимфодренажный массаж лица',
       mainScreenSubheading: `Убирает отёки и&nbsp;мешки под&nbsp;глазами, улучшает цвет лица`,
       mainScreenFeatures: [
@@ -101,7 +102,7 @@ block variables
       },
       priceList: {
         showPromo: true
-      },
+      }
     }
 
 block content
