--- a/src/pug/pages/figure-modeling.pug
+++ b/src/pug/pages/figure-modeling.pug
@@ -12,6 +12,7 @@ block variables
       canonical: 'http://expert-massage-clinic.ru/figure-modeling.html',
       pageClass: 'figure-modeling-page',
       theme: '7',
+      massage: globalData.massages['figure-modeling'],
       mainScreenHeading: 'Ручное моделирование фигуры',
       mainScreenSubheading: `Авторская техника для&nbsp;похудения и&nbsp;подтягивания кожи. Уходит лишний вес, тают
         объёмы`,
