--- a/src/pug/pages/fullbody-massage.pug
+++ b/src/pug/pages/fullbody-massage.pug
@@ -12,6 +12,7 @@ block variables
       canonical: 'http://expert-massage-clinic.ru/fullbody-massage.html',
       pageClass: 'fullbody-massage-page',
       theme: '11',
+      massage: globalData.massages['fullbody-massage'],
       mainScreenHeading: 'Общий массаж тела',
       mainScreenSubheading: `Расслабление, снятие напряжения и&nbsp;усталости мышц, оздоровление всего организма`,
       mainScreenFeatures: [
