--- a/src/pug/pages/japanese-asahi-massage.pug
+++ b/src/pug/pages/japanese-asahi-massage.pug
@@ -12,6 +12,7 @@ block variables
       canonical: 'http://expert-massage-clinic.ru/japanese-asahi-massage.html',
       pageClass: 'japanese-asahi-massage-page',
       theme: '4',
+      massage: globalData.massages['japanese-asahi-massage'],
       mainScreenHeading: 'Японский массаж лица Асахи-Зоган',
       mainScreenSubheading: `Глубокая, интенсивная проработка. Формирует красивый овал, омолаживает`,
       mainScreenFeatures: [
