--- a/src/pug/pages/neck-massage.pug
+++ b/src/pug/pages/neck-massage.pug
@@ -12,6 +12,7 @@ block variables
       canonical: 'http://expert-massage-clinic.ru/neck-massage.html',
       pageClass: 'neck-massage-page',
       theme: '10',
+      massage: globalData.massages['neck-massage'],
       mainScreenHeading: 'Массаж шейно-воротниковой зоны',
       mainScreenSubheading: `Снятие боли и&nbsp;усталости с&nbsp;шейного отдела, улучшение работы мозга`,
       mainScreenFeatures: [
