--- a/src/pug/pages/sculptural-buccal-massage.pug
+++ b/src/pug/pages/sculptural-buccal-massage.pug
@@ -12,6 +12,7 @@ block variables
       canonical: 'http://expert-massage-clinic.ru/sculptural-buccal-massage.html',
       pageClass: 'sculptural-buccal-massage-page',
       theme: '1',
+      massage: globalData.massages['sculptural-buccal-massage'],
       mainScreenHeading: 'Скульптурно-буккальный массаж лица',
       mainScreenSubheading: `Полная альтернатива пластике, стирает морщинки и&nbsp;отёки, корректирует овал лица`,
       mainScreenFeatures: [
