--- a/src/pug/pages/sports-massage.pug
+++ b/src/pug/pages/sports-massage.pug
@@ -12,6 +12,7 @@ block variables
       canonical: 'http://expert-massage-clinic.ru/sports-massage.html',
       pageClass: 'sports-massage-page',
       theme: '6',
+      massage: globalData.massages['sports-massage'],
       mainScreenHeading: 'Спортивный массаж',
       mainScreenSubheading: `Снятие боли в&nbsp;мышцах, ускоренное восстановление, улучшение результатов. Возвращение
         в&nbsp;спорт после травм`,
