--- a/src/pug/utils/global-data.pug
+++ b/src/pug/utils/global-data.pug
@@ -40,8 +40,7 @@
         duration: 60,
         promo: {
           text: 'Акция — скидка на первый сеанс 25%',
-          starPlacement: 2, // 1 - massage name, 2 - first price, 3 - second price, 4 - duration
-          highlightRow: false
+          starPlacement: 2 // 1 - massage name, 2 - first price, 3 - second price, 4 - duration
         }
       },
       'fullbody-massage': {
@@ -104,8 +103,7 @@
         duration: 50,
         promo: {
           text: 'Акция — скидка на июль и август 25%',
-          starPlacement: 3, // 1 - massage name, 2 - first price, 3 - second price, 4 - duration
-          highlightRow: true
+          starPlacement: 3 // 1 - massage name, 2 - first price, 3 - second price, 4 - duration
         }
       },
       'facial-lymphatic-drainage': {
