--- a/src/assets/scss/blocks/price-list/price-list.scss
+++ b/src/assets/scss/blocks/price-list/price-list.scss
@@ -8,7 +8,7 @@
   }
 
   &__title {
-    margin-bottom: 2rem;
+    margin-bottom: 3rem;
   }
 
   &__promotion {
@@ -18,8 +18,7 @@
   }
 
   &__type-caption,
-  &__first-price,
-  .table__cell_heading {
+  &__first-price {
     @include themify() {
       color: $color-primary;
     }
@@ -66,6 +65,13 @@
       &_promo {
         .table__cell::after {
           content: '*';
+
+          font-weight: 700;
+          font-size: 1.8rem;
+          line-height: 1;
+          @include themify() {
+            color: $color-primary;
+          }
         }
       }
 
@@ -112,6 +118,8 @@
         padding-top: 0;
         padding-bottom: 1.5rem;
 
+        color: $dark-dim-color;
+
         &:first-of-type {
           position: static;
         }
@@ -149,6 +157,32 @@
   }
 }
 
+.theme-4 {
+  .price-list {
+    .promotion-card__button {
+      background-color: map-deep-get($themes, '4', 'secondary-light');
+
+      @include in-focus() {
+        background-color: map-deep-get($themes, '4', 'secondary');
+      }
+    }
+
+    &__promo-text {
+      color: map-deep-get($themes, '4', 'primary-dark');
+    }
+  }
+}
+
+@each $i in (6, 7, 9, 10) {
+  .theme-#{$i} {
+    .price-list {
+      .price-list-callback-form {
+        background-color: map-deep-get($themes, '#{$i}', 'alt-background');
+      }
+    }
+  }
+}
+
 @media (min-width: $tablet-min-width) {
   .price-list {
     margin-bottom: 10rem;
@@ -158,7 +192,7 @@
     }
 
     &__title {
-      margin-bottom: 2rem;
+      margin-bottom: 4rem;
     }
   }
 }
@@ -187,24 +221,36 @@
     &__callback {
       max-width: 39rem;
       width: 38%;
-      margin-left: 0;
-      margin-right: 2%;
-    }
-
-    &__promotion {
-      order: 1;
     }
 
     &__callback {
       order: 2;
+      margin-top: 22rem;
+      margin-right: 0;
+      margin-left: 2%;
+    }
+
+    &__promotion {
+      order: 1;
+
+      &,
+      ~ .price-list__callback {
+        margin-top: 0;
+        margin-right: 2%;
+        margin-left: 0;
+      }
     }
 
     &__prices {
-      order: 3;
       width: 60%;
     }
 
+    &__promotion ~ .price-list__prices {
+      order: 3;
+    }
+
     &__section {
+      margin-bottom: 5rem;
       padding-top: 0;
     }
 
@@ -236,7 +282,7 @@
       margin-bottom: 2rem;
 
       &__row {
-        &:nth-child(even) {
+        &:not(.table__row_highlight):nth-child(even) {
           background-color: $alt-default-color;
         }
       }
@@ -245,6 +291,12 @@
         &,
         &:first-of-type {
           padding: 0.7rem 1rem;
+        }
+
+        &_heading {
+          @include themify() {
+            color: $color-primary;
+          }
         }
       }
     }
@@ -270,18 +322,40 @@
       }
     }
   }
+
+  @each $i in (4, 6, 7, 9) {
+    .theme-#{$i} {
+      .price-list {
+        &__promo-text {
+          background-color: map-deep-get($themes, '#{$i}', 'alt-background');
+          border-color: map-deep-get($themes, '#{$i}', 'alt-background');
+
+          @if $i == 7 {
+            color: map-deep-get($themes, '#{$i}', 'secondary');
+          }
+        }
+      }
+    }
+  }
 }
 
 @media (min-width: $desktop-min-width) {
   .price-list {
-    &__promotion,
-    &__callback {
-      margin-left: 6%;
-      margin-right: 4%;
-    }
-
     &__prices {
       width: 52%;
+      margin-left: 4%;
+    }
+
+    &__promotion {
+      &,
+      ~ .price-list__callback {
+        margin-left: 6%;
+        margin-right: 4%;
+      }
+
+      ~ .price-list__prices {
+        margin-left: 0;
+      }
     }
   }
 }
