--- a/src/assets/scss/blocks/reusable/link.scss
+++ b/src/assets/scss/blocks/reusable/link.scss
@@ -46,6 +46,24 @@
     }
   }
 
+  &_primary-dark {
+    @include themify() {
+      color: $color-primary-dark;
+
+      @include in-focus() {
+        color: $color-primary-dark;
+      }
+
+      &.underline {
+        border-bottom-color: $color-primary-x-transparent;
+
+        @include in-focus() {
+          border-bottom-color: $color-primary-dark;
+        }
+      }
+    }
+  }
+
   &_secondary {
     @include themify() {
       color: $color-secondary;
