--- a/src/pug/pages/classic-facial-massage.pug
+++ b/src/pug/pages/classic-facial-massage.pug
@@ -12,6 +12,7 @@ block variables
       canonical: 'http://expert-massage-clinic.ru/classic-facial-massage.html',
       pageClass: 'classic-facial-massage-page',
       theme: '2',
+      massage: globalData.massages['classic-facial-massage'],
       mainScreenHeading: 'Классический массаж лица',
       mainScreenSubheading: `Снимает спазмы и&nbsp;усталость мышц, улучшает цвет и&nbsp;тонус лица`,
       mainScreenFeatures: [
