Add specialists slider

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -73,4 +73,7 @@
 @use 'blocks/price-list/promotion-card';
 @use 'blocks/price-list/price-list-callback-form';
 
+@use 'blocks/specialists/specialists';
+@use 'blocks/specialists/specialist-card';
+
 @use 'blocks/footer/page-footer';
