--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -124,5 +124,6 @@ block content
   include ../includes/modules/content/massage-choosing-test
   include ../includes/modules/content/video-reviews
   include ../includes/modules/content/price-list
+  include ../includes/modules/content/specialists
 
 block script
