Add certificate block

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -76,4 +76,9 @@
 @use 'blocks/specialists/specialists';
 @use 'blocks/specialists/specialist-card';
 
+@use 'blocks/certiificate/certificate';
+
+@use 'blocks/articles/articles';
+@use 'blocks/articles/article-card';
+
 @use 'blocks/footer/page-footer';
