--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -125,5 +125,7 @@ block content
   include ../includes/modules/content/video-reviews
   include ../includes/modules/content/price-list
   include ../includes/modules/content/specialists
+  include ../includes/modules/content/certificate
+  include ../includes/modules/content/articles
 
 block script
