--- a/src/assets/scss/blocks/specialists/specialist-card.scss
+++ b/src/assets/scss/blocks/specialists/specialist-card.scss
@@ -44,6 +44,7 @@
     white-space: nowrap;
 
     background-color: #e5f2f9;
+    border-radius: 0.3rem;
 
     &:last-of-type {
       margin-right: 0;
