--- a/src/pug/includes/modules/header/main-menu.pug
+++ b/src/pug/includes/modules/header/main-menu.pug
@@ -20,7 +20,7 @@
       },
       {
         text: 'Полезное',
-        url: 'information.html'
+        url: 'articles.html'
       }
     ],
     promo: {
