Add social links on index page

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -78,6 +78,8 @@
 
 @use 'blocks/certiificate/certificate';
 
+@use 'blocks/socials/socials';
+
 @use 'blocks/articles/articles';
 @use 'blocks/articles/article-card';
 
