--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -127,5 +127,6 @@ block content
   include ../includes/modules/content/specialists
   include ../includes/modules/content/certificate
   include ../includes/modules/content/articles
+  include ../includes/modules/content/socials
 
 block script
