--- a/src/pug/includes/modules/svg-sprite/svg-sprite.pug
+++ b/src/pug/includes/modules/svg-sprite/svg-sprite.pug
@@ -26,3 +26,6 @@ svg.svg-sprite.visually-hidden(xmlns="http://www.w3.org/2000/svg" xmlns:xlink="h
         stop(offset="62%" stop-color="#d92e7f")
         stop(offset="85%" stop-color="#9b36b7")
         stop(offset="100%" stop-color="#515ecf")
+    symbol#map-pin(viewBox="0 0 29 46")
+      path(d="M14.4787 45.5068C25.7101 35.3669 40.5893 -0.569826 14.4784 0.00683594C-11.6324 0.583498 3.39173 33.2336 14.4787 45.5068Z")
+      ellipse(cx="14.5" cy="14.5078" rx="8.5" ry="8" fill="#ffffff")
