--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -128,5 +128,6 @@ block content
   include ../includes/modules/content/certificate
   include ../includes/modules/content/articles
   include ../includes/modules/content/socials
+  include ../includes/modules/footer/map-block
 
 block script
