--- a/src/pug/pages/sports-massage.pug
+++ b/src/pug/pages/sports-massage.pug
@@ -117,5 +117,6 @@ block content
   include ../includes/modules/content/reviews-block
   include ../includes/modules/content/features-list
   include ../includes/modules/content/price-list
+  include ../includes/modules/footer/map-block
 
 block script
