--- a/src/pug/utils/global-data.pug
+++ b/src/pug/utils/global-data.pug
@@ -167,7 +167,9 @@
       phones: [
         '+7 499 397-71-81',
         '+7 915 000-63-42'
-      ]
+      ],
+      address: `м. Цветной Бульвар<br>1-й Волконский переулок, д.15`,
+      workingHours: `с 9:00 до 21:00<br>без выходных`
     }
   }
 - locals.data.globalData.company.businessDuration = locals.data.globalData.currentYear - locals.data.globalData.company.foundationYear
