--- a/src/pug/includes/modules/footer/footer.pug
+++ b/src/pug/includes/modules/footer/footer.pug
@@ -1,2 +1,39 @@
+-
+  var footerLogo = {
+    desktop: false,
+    tablet: false,
+    mobile: {
+      webp: {
+        '1x': 'assets/img/logo/logo_gray@1x.webp',
+        '2x': 'assets/img/logo/logo_gray@2x.webp',
+        '3x': 'assets/img/logo/logo_gray@3x.webp'
+      },
+      jpg: {
+        '1x': 'assets/img/logo/logo_gray@1x.jpg',
+        '2x': 'assets/img/logo/logo_gray@2x.jpg',
+        '3x': 'assets/img/logo/logo_gray@3x.jpg'
+      }
+    }
+  }
+
 footer.page-footer
-  p This is footer
+  .page-footer__content.container
+    p.page-footer__copyright
+      | Любое использование либо копирование материалов или подборки материалов сайта, элементов дизайна и оформления
+      | допускается лишь с разрешения правообладателя и только со ссылкой на источник: https://expert-massage-clinic.ru
+    .page-footer__company
+      a(href='/')
+        +picture-tag(footerLogo, footerLogo.mobile.jpg['3x'], 'Клиника профессионального массажа Expert', '125', '26').page-footer__logo
+      p.page-footer__company-text= `Массаж в Москве ${locals.data.globalData.company.foundationYear}-${locals.data.globalData.currentYear}`
+    .page-footer__socials
+      ul.socials__icons
+        li.socials__icons-item
+          a.socials__link(href='https://www.instagram.com/expert_massage_clinic/')
+            +svg-icon('#ig-icon').socials__icon.socials__icon_ig(width='25' height='24')
+            +svg-icon('#ig-icon-color').socials__icon.socials__icon_ig.socials__icon_ig-color(width='25' height='24')
+        li.socials__icons-item
+          a.socials__link(href='#')
+            +svg-icon('#vk-icon').socials__icon.socials__icon_vk(width='38' height='23')
+        li.socials__icons-item
+          a.socials__link(href='#')
+            +svg-icon('#fb-icon').socials__icon.socials__icon_fb(width='26' height='26')
