--- a/src/pug/includes/modules/footer/map-block.pug
+++ b/src/pug/includes/modules/footer/map-block.pug
@@ -3,6 +3,11 @@ section.map-block
     h2.visually-hidden Наш адрес
     .map-block__wrap
       #map(style='width: 100%; height: 420px;')
+      .map-block__image
+        picture
+          source(srcset='assets/img/map/static-map_desktop.jpg' media='(min-width: 768px)')
+          source(srcset='assets/img/map/static-map_mobile.jpg')
+          img(src='assets/img/map/static-map_desktop.jpg' alt='' height='420')
       .map-block__info
         p.map-block__text!= locals.data.globalData.company.address
         p.map-block__text!=locals.data.globalData.company.workingHours
