Add famous-clients slider. Add reviews slider autoplay

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -67,6 +67,8 @@
 @use 'blocks/massage-choosing-test/test-slide';
 @use 'blocks/massage-choosing-test/test-success';
 
+@use 'blocks/famous-clients/famous-clients';
+
 @use 'blocks/video-reviews/video-reviews';
 
 @use 'blocks/price-list/price-list';
