--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -122,6 +122,7 @@ block content
   include ../includes/modules/content/reviews-block
   include ../includes/modules/content/massage-types
   include ../includes/modules/content/massage-choosing-test
+  include ../includes/modules/content/famous-clients
   include ../includes/modules/content/video-reviews
   include ../includes/modules/content/price-list
   include ../includes/modules/content/specialists
